alignment fixed

--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ body{
     right: -30px;
     width: 300px;
     transform: rotateZ(-15deg);
-    top: 100px;
+    top: 1000px;
     z-index: 99999999;
 }
 #Miner6{
